--- a/index.ipynb
+++ b/index.ipynb
@@ -176,22 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ceo'"
+       "'CEO'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Ceo\".capitalize() # 'CEO'"
+    "\"Ceo\".upper() # 'CEO'"
    ]
   },
   {
@@ -209,7 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\".end # False"
    ]
   },
   {
